@@ -1,5 +1,6 @@
 {
   "ph-scale.name": "pH Scale",
+  "ph-scale-basics.name": "pH Scale: Basics",
   "custom": "Custom",
   "solutions": "Solutions",
   "choice.milk": "milk",
